[gd_scene load_steps=9 format=2]

[ext_resource path="res://Bingus Assets/graphics/lightspreadbullet/0.png" type="Texture" id=1]
[ext_resource path="res://Bingus Assets/graphics/lightspreadbullet/1.png" type="Texture" id=2]
[ext_resource path="res://Bingus Assets/graphics/lightspreadbullet/3.png" type="Texture" id=3]
[ext_resource path="res://Bingus Assets/graphics/lightspreadbullet/2.png" type="Texture" id=4]
[ext_resource path="res://Bosses/LightSpiralBullet.gd" type="Script" id=5]
[ext_resource path="res://Enemies/GenericLightBullet.tscn" type="PackedScene" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 15.0333

[node name="LightSpiralBullet" type="Area2D"]
collision_layer = 16
script = ExtResource( 5 )
lightbullet = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="BulletDeath" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="SpeedZero" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="BulletDelay" type="Timer" parent="."]
wait_time = 0.05

[connection signal="body_entered" from="." to="." method="_on_LightSpiralBullet_body_entered"]
[connection signal="timeout" from="BulletDeath" to="." method="_on_BulletDeath_timeout"]
[connection signal="timeout" from="SpeedZero" to="." method="_on_SpeedZero_timeout"]
[connection signal="timeout" from="BulletDelay" to="." method="_on_BulletDelay_timeout"]
